syntax = "proto3";

package onyx_otc.v2;
option csharp_namespace = "Onyx.Otc";

message Decimal {
  string value = 1;
}

message Spread {
  string front = 1;
  string back = 2;
}

message Butterfly {
  string front = 1;
  string middle = 2;
  string back = 3;
}

message TradableSymbol {
  oneof symbol {
    string flat = 1;
    Spread spread = 2;
    Butterfly butterfly = 3;
  }
}

