syntax = "proto3";

package onyx_otc.v2;
option csharp_namespace = "Onyx.Otc";

import "onyx_otc/v2/common.proto";
import "onyx_otc/v2/types.proto";
import "google/protobuf/timestamp.proto";


message Trader {
  string id = 1;
  string account_name = 2;
  string full_name = 3;
  string email = 4;
}

message Fee {
  string currency = 1;
  Decimal signed_amount = 2;
  Decimal rate = 3;
}

message Execution {
  string id = 1;
  string order_id = 2;
  string client_order_id = 3;
  string account_id = 4;
  Exchange exchange = 5;
  string symbol = 6;
  Decimal amount = 7;
  Decimal price = 8;
  Side side = 9;
  google.protobuf.Timestamp created_timestamp = 13;
  Fee fee = 19;
  Trader user = 20;
}

message Order {
  string id = 1;
  string client_order_id = 2;
  Trader user = 3;
  string account_id = 4;
  Exchange exchange = 5;
  string product_symbol = 6;
  TradableSymbol symbol = 7;
  OrderType order_type =  10;
  OrderState order_state = 11;
  Decimal amount = 12;
  optional Decimal price = 13;
  Side side = 16;
  google.protobuf.Timestamp created_timestamp = 17;
  optional Decimal executed_avg_price = 21;
  optional Decimal executed_amount = 22;
  repeated Execution executions = 26;
}

message Subscription {
  Channel channel = 1;
  string symbol = 2;
  SubscriptionStatus status = 4;
}

message OtcError {
  string message = 1;
  OtcErrorCode code = 2;
}


message OtcResponse {
  string id = 1;
  google.protobuf.Timestamp timestamp = 2;
  oneof response {
    Order order = 11;
    Subscription subscription = 12;
    OtcError error = 13;
  }
}
